<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="action_backup">Backup</string>
    <string name="action_search">Search by names</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_delete_one">Delete</string>
    <string name="action_test_noti">Test notification, swipe to dismiss</string>

    <string name="no_birthday_for_upcoming">No birthday for coming three days</string>
    <string name="no_birthday_data">No birthday records found</string>
    <string name="title_activity_up_coming_fragment">UpComingFragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_up_coming">UpComingActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_today_birthday">Today birthdays</string>
    <string name="random_quote">Random quote</string>

    <string name="tab_title_upcoming">Coming Birthdays</string>
    <string name="tab_title_contact">Contact</string>
    <string name="tab_title_quote">Ramdom quotes</string>

    <string name="title_activity_add_birthday">Add Birthday</string>
    <string name="add_birthday_name">Name</string>
    <string name="add_birthday_email">Email</string>
    <string name="add_birthday_phone">Phone</string>
    <string name="add_birthday_date">Birthday</string>
    <string name="add_bithday_notification">Show Notification</string>
    <string name="birthday_countdown">Birthday</string>
    <string name="birthday_left">left</string>
    <string name="birthday_ago">ago</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_view_birthday">ViewBirthdayActivity</string>
    <string name="title_activity_edit_birthday">Edit Birthday</string>

    <string name="dialog_message">You will lose all records!</string>
    <string name="dialog_title">Delete All Records</string>
    <string name="dialog_copy_text">Copy text</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="inserted">Record inserted</string>
    <string name="updated">Record updated</string>
    <string name="db_error">Update error</string>
    <string name="delete_success">All records have been deleted</string>
    <string name="btn_ok">OK</string>

    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>

    <string name="select_image">Please select an image</string>
    <string name="warning_message_no_fillup">Please fill up all info</string>
    <string name="warning_message_no_fullup_date">Please fill up the date</string>

    <string name="progress_dialog_uploading">"Uploading</string>
    <string name="backup_success">Successfully backups %d record(s) to the cloud</string>
    <string name="no_network">Network unavailable</string>

    <string name="no_quote_found">No quotes available, try again later</string>
    <string name="copied_success">Copied to clipboard</string>

    <string name="notification_title">Today bithdays</string>
    <string name="notification_content">You have %d friend(s) birthday today.</string>
    <string name="test_noti">Test notification</string>
    <string name="about">About the app</string>

    <string name="dev_email">weilun001@1utar.my</string>

    <string name="welcome_title">Welcome to Birthday Reminder app</string>
    <string name="welcome_message">This app allows you to store birthdays of friends.
     Everyday 8:00 a.m., the app you send notification about today\'s birthday. \"Coming birthday\" tab will display
        a list of contacts whose birthdays are on today, tomorrow and day after tomorrow.
  You can send a random quote to them.
    Random quotes can be found at the quotes tab (3rd tab)</string>
</resources>